🐛 grid layout fix for float image
components have grid layout properties and should be wrapped in a grid container. This was broken in the new grav alternative and is now fixed. All .col classes were removed and only those that are needed should be defined as this could cause us to hit out css 50kb limit. Class name .col-full was added for components that should take up the entire parent grid layout.  #63

--- a/frontend/source/scss/components/organisms/_container.scss
+++ b/frontend/source/scss/components/organisms/_container.scss
@@ -7,4 +7,18 @@
 */
 
 .#{organism('container')} {
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: auto;
+  width: 100%;
+	margin-bottom: 5em;
+
+
+  @media screen and (min-width: 768px) {
+    grid-template-columns: repeat(12, 1fr);
+
+    .col-full {
+      grid-column: 1 / -1;
+    }
+  }
 }
